Remove MaxPermSize so that it works with newer Java-versions